# astro-site-template

./: .gitignore  README.md  TODOS.md  docker-compose.yml  main.py  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.cursor/rules/: colors.md  commits.md  design-checklist.md  design-summary.md  design-vision-2026.md  design.md  git-workflow.md  images.md  language.md  layout-composition.md  project.md  python-tdd.md  tasks.md
.github/workflows/: ci.yml
apps/web/astro/: docker-compose.yml  eslint.config.mjs  package.json  tailwind.config.mjs
apps/web/astro/public/images/: README.md
apps/web/astro/src/components/sections/: AppStoreDescription.astro  CTABand.astro  FAQ.astro  Features.astro  Footer.astro  Header.astro  Hero.astro  HowItWorks.astro  ImagePause.astro  LatestNews.astro  Pricing.astro  SocialProof.astro
apps/web/astro/src/components/ui/: AppStoreBadge.astro  CookieConsent.astro  ThemeToggle.astro
apps/web/astro/src/config/: blog.ts  brand.ts
apps/web/astro/src/pages/: cookies.astro  index.astro  privacy.astro  terms.astro
apps/web/astro/src/styles/: global.css
scripts/: check-cyrillic.sh
services/api-lambda/: Makefile  pyproject.toml  ruff.toml
services/api-lambda/events/: apigw_v2_health.json
services/api-lambda/src/api_lambda/: app.py  handler.py
services/api-lambda/tests/: test_handler.py  test_health.py
tasks/: task-001.md  task-002.md  task-003.md  task-004.md  task-005.md  task-006.md  task-007.md  task-008.md  task-009.md  task-010.md  task-011.md  task-012.md  task-013.md  task-014.md  task-015.md  task-016.md
(+2 files in other folders)
