[project]
name = "api-lambda"
version = "0.0.0"
description = "AWS Lambda backend (Python)"
requires-python = "==3.14.2"
dependencies = [
    "fastapi>=0.128.0",
    "mangum>=0.20.0",
]

[tool.uv]
managed = true

[dependency-groups]
dev = [
  "ruff>=0.12.0",
  "pytest>=8.4.0",
  "httpx>=0.28.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I"]
